--- a/.github/workflows/ lint.yml
+++ b/.github/workflows/ lint.yml
@@ -1,7 +1,11 @@
 name: Linting
 
 on:
-  [pull_request, push]
+  pull_request:
+  push:
+    branches:
+      - develop
+      - main
 
 jobs:
   lint:
